# red-chili-pepper-pests-model

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: Template_Submission_Akhir.ipynb
saved_model/: fingerprint.pb  saved_model.pb
saved_model/variables/: variables.index
tfjs_model/: model.json
